--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+owrx-connector (0.5.0) UNRELEASED; urgency = low
+
+ -- Jakob Ketterl <jakob.ketterl@gmx.de>  Sat, 08 May 2021 22:05:00 +0000
+
 owrx-connector (0.4.0) buster hirsute; urgency=low
   * First release using debian build system; first changelog entry.
   * New connector library introduced that contains common functionality for
