--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 owrx-connector (0.5.0) UNRELEASED; urgency=low
 
- -- Jakob Ketterl <jakob.ketterl@gmx.de>  Sat, 08 May 2021 22:05:00 +0000
+  * Improves performance on 32bit ARM through vectorization
+  * Fixes some memory leaks
+
+ -- Jakob Ketterl <jakob.ketterl@gmx.de>  Mon, 02 Aug 2021 16:15:00 +0000
 
 owrx-connector (0.4.0) buster hirsute; urgency=low
+
   * First release using debian build system; first changelog entry.
   * New connector library introduced that contains common functionality for
     all connectors
