--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-owrx-connector (0.5.0) UNRELEASED; urgency=low
+owrx-connector (0.5.0) buster hirsute; urgency=low
 
   * Improves performance on 32bit ARM through vectorization
   * Fixes some memory leaks
 
- -- Jakob Ketterl <jakob.ketterl@gmx.de>  Mon, 02 Aug 2021 16:15:00 +0000
+ -- Jakob Ketterl <jakob.ketterl@gmx.de>  Mon, 02 Aug 2021 16:16:00 +0000
 
 owrx-connector (0.4.0) buster hirsute; urgency=low
 
