--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+owrx-connector (0.6.0) UNRELEASED; urgency=low
+
+ -- Jakob Ketterl <jakob.ketterl@gmx.de>  Mon, 02 Aug 2021 19:48:00 +0000
+
 owrx-connector (0.5.0) buster hirsute; urgency=low
 
   * Improves performance on 32bit ARM through vectorization
