--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+owrx-connector (0.6.1) bullseye jammy; urgency=low
+
+  * New build for csdr 0.18.1
+
+ -- Jakob Ketterl <jakob.ketterl@gmx.de>  Mon, 26 Sep 2022 18:01:00 +0000
+
 owrx-connector (0.6.0) bullseye jammy; urgency=low
 
   * Switch to csdr ringbuffer implementation
